--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/library_detail.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/library_detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{ library.name }} - Details</title>
+    <title>{{ library.name }}</title>
 </head>
 <body>
     <h1>{{ library.name }}</h1>
@@ -12,7 +12,7 @@
         {% for book in books %}
             <li>{{ book.title }} by {{ book.author }}</li>
         {% empty %}
-            <li>No books available in this library.</li>
+            <li>No books in this library.</li>
         {% endfor %}
     </ul>
 </body>
